--- a/index.html
+++ b/index.html
@@ -15,12 +15,23 @@
         <div id="calculator">
             
             <div id="result">
-                <div id="history">
-                    <p id="history-value"></p>
+                <div id="output-text">
+                    <div id="history">
+                        <p id="history-value"></p>
+                    </div>
                 </div>
 
                 <div id="output">
                     <p id="output-value"></p>
+                </div>
+            </div>
+            <div id="output-microphone">
+                <span id="microphone">
+                </span>
+                <div class="tooltip">
+                    Operations are plus, minus, multiply, division & remainder. The user input format is number + operation + number.
+                    <br><br>
+                    Eg: 2 multiply 5 will be 2 x 5.
                 </div>
             </div>
 
